--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
     <link rel="shortcut icon"
         href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/800px-HTML5_Badge.svg.png"
         type="image/x-icon">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>HTML ONLY</title>
 </head>
 
 <body>
     <header>
         <h1>HTML Only</h1>
-        <ul> Navigation
-            <li><a href="#what-is-this">What is this?</a></li>
-            <li><a href="#how-does-this-work">How does this work?</a></li>
-            <li><a href="#but-why">But why?</a></li>
-        </ul>
+        <div class="nav">
+            <p id="navigation-title">Navigation</p>
+            <ul>
+                <li><a href="#what-is-this">What is this?</a></li>
+                <li><a href="#how-does-this-work">How does this work?</a></li>
+                <li><a href="#but-why">But why?</a></li>
+            </ul>
+        </div>
     </header>
+    <hr>
     <main>
         <div class="article" id="what-is-this">
             <h2>What is this?</h2>
@@ -28,12 +33,13 @@
                 accessible. But here we are. I'm trying my best.
             </p>
         </div>
+        <hr>
         <div class="article" id="how-does-this-work">
             <h2>How does this work?</h2>
             <p> The key to a lot of this is leveraging using tables with a
-                role="presentation" attribute to make decorated sections
-                without css. If you view source on the page, you'll see
-                that there are a LOT of tables. The table tag typically
+                <span class="code">role="presentation"</span> attribute to make decorated
+                sectionswithout css. If you view source on the page, you'll
+                see that there are a LOT of tables. The table tag typically
                 is used to display tabular data and should NOT be used
                 as a layout method. However, since I am not allowed to
                 use CSS, I am pretty much exclusively relying on tables
@@ -42,19 +48,22 @@
                 accessibility tree. This will make it easier to navigate
                 for assistive technology.
             </p>
+            <br>
             <p>
                 I'm also leveraging some deprecated HTML elements from
                 HTML 3.2 that you should never use. In order to be "compliant",
                 I've added the HTML 3.2 doctype at the top of the page:
-                <span id="code">&gt;!DOCTYPE HTML PUBLIC "&quot;-//W3C//DTD HTML 3.2 Final//EN&quot;&lt;</span>
+                <span class="code">&gt;!DOCTYPE HTML PUBLIC "&quot;-//W3C//DTD HTML 3.2 Final//EN&quot;&lt;</span>
                 This helps give a hint to the browser that we are going to use some older stuff.
             </p>
+            <br>
             <p>
                 HOWEVER, I'm also using some newer things such as details/summary,
                 section, main, header, and footer. So I'm just making a mess of my
                 doctype and what I should be actually using!
             </p>
         </div>
+        <hr>
         <div class="article" id="but-why">
             <h2>But why?</h2>
             <img src="https://c.tenor.com/KjJTBQ9lftsAAAAd/why-huh.gif" alt="ryan-reynold-but-why-gif">
@@ -64,11 +73,13 @@
             </p>
         </div>
     </main>
+    <hr>
     <footer>
         <p>
             Created by <a href="#">Alex Riviere</a>
-            <br>
-            &lpar;One <span id="marquee">marquee</span> for good measure...&rpar;
+        </p>
+        <p id="marquee">
+            &lpar;One <span id="marquee-text">marquee</span> for good measure...&rpar;
         </p>
     </footer>
 </body>
