--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
             <p>
                 I'm also leveraging some deprecated HTML elements from
                 HTML 3.2 that you should never use. In order to be "compliant",
-                I've added the HTML 3.2 doctype at the top of the page:
-                <span class="code">&gt;!DOCTYPE HTML PUBLIC "&quot;-//W3C//DTD HTML 3.2 Final//EN&quot;&lt;</span>
+                I've added the HTML 3.2 doctype at the top of the page:<br>
+                <span class="code">&gt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 3.2 Final//EN&quot;&lt;</span><br>
                 This helps give a hint to the browser that we are going to use some older stuff.
             </p>
             <br>
             <p>
-                HOWEVER, I'm also using some newer things such as details/summary,
-                section, main, header, and footer. So I'm just making a mess of my
-                doctype and what I should be actually using!
+                HOWEVER, I'm also using some newer things such as <span class="code">details/summary,
+                section, main, header, </span>and <span class="code">footer</span>. So I'm just making a 
+                mess of my doctype and what I should be actually using!
             </p>
         </div>
         <hr>
         <div class="article" id="but-why">
-            <h2>But why?</h2>
+            <h2>But Why?</h2>
             <img src="https://c.tenor.com/KjJTBQ9lftsAAAAd/why-huh.gif" alt="ryan-reynold-but-why-gif">
             <p>
                 I make terrible things. This was an exciting <a href="#">nerd snipe</a>
